@@ -208,8 +208,12 @@ class ApiQueryLogEvents extends ApiQueryBase {
 			case 'block':
 				$vals2 = array();
 				list( $vals2['duration'], $vals2['flags'] ) = $params;
-				$vals2['expiry'] = wfTimestamp( TS_ISO_8601,
+				
+				// Indefinite blocks have no expiry time
+				if ( Block::parseExpiryInput( $params[0] ) !== Block::infinity() ) {
+					$vals2['expiry'] = wfTimestamp( TS_ISO_8601,
 						strtotime( $params[0], wfTimestamp( TS_UNIX, $ts ) ) );
+				}
 				$vals[$type] = $vals2;
 				$params = null;
 				break;
